--- a/Unidad7_RuidoEstadio/cliente/index.html
+++ b/Unidad7_RuidoEstadio/cliente/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <title>Batalla de Ruido - Estadio</title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/addons/p5.sound.min.js"></script>
-  <script src="/socket.io/socket.io.js"></script>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <main></main>
-  <script src="sketch.js"></script>
-</body>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Batalla de Ruido</title>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.9.0/lib/p5.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.9.0/lib/addons/p5.sound.min.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="sketch.js"></script>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <h1>Batalla de Ruido (Simulación)</h1>
+  </body>
 </html>
